# vibecode_termidesk_vdi

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
deploy/: prometheus.yml
knowledge/termidesk/: faq.md  troubleshooting.md
scripts/: reingest.sh  smoke_test_rag.sh
services/ingest/: Dockerfile  pyproject.toml
services/ingest/src/ingest/: config.py  main.py  pipeline.py
services/ingest/src/ingest/chunking/: __init__.py  base.py  paragraph_chunker.py  splitter.py
services/ingest/src/ingest/db/: __init__.py  models.py
services/ingest/src/ingest/embedding/: __init__.py  base.py  stub.py
services/ingest/src/ingest/loaders/: __init__.py  base.py  pdf_loader.py  text_loader.py
services/ingest/tests/: __init__.py  test_chunker.py  test_ingest_idempotent.py
services/llm/: Dockerfile  pyproject.toml
services/llm/src/llm/: config.py  main.py
services/llm/src/llm/api/: __init__.py  schemas.py
services/llm/src/llm/client/: __init__.py  base.py  http_client.py  mock_client.py
services/llm/tests/: __init__.py  test_mock_client.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/alembic/: env.py
services/orchestrator/alembic/versions/: 001_create_orchestrator_schema.py  002_add_users_table.py
services/orchestrator/src/orchestrator/: config.py  main.py
services/orchestrator/src/orchestrator/api/: __init__.py  routes.py  schemas.py
services/orchestrator/src/orchestrator/clients/: __init__.py  llm_client.py  retrieval_client.py
services/orchestrator/src/orchestrator/repositories/: __init__.py  conversation_repository.py  message_repository.py  models.py  user_repository.py
services/orchestrator/src/orchestrator/service/: __init__.py  context_utils.py  dialog_service.py  prompts.py  rag_text.py
services/orchestrator/tests/: __init__.py  test_context_utils.py  test_dialog_service.py  test_prompts.py  test_rag_text.py
services/retrieval/: Dockerfile  alembic.ini  pyproject.toml
services/retrieval/alembic/: env.py
services/retrieval/alembic/versions/: 001_create_retrieval_schema.py  002_add_documents_version_and_ivfflat.py  003_chunks_section_title_document_title_position_token_count.py  004_dedup_and_unique_constraints.py
services/retrieval/src/retrieval/: config.py  main.py
services/retrieval/src/retrieval/api/: __init__.py  routes.py  schemas.py
services/retrieval/src/retrieval/service/: __init__.py  search_service.py
services/retrieval/src/retrieval/storage/: __init__.py  base.py  models.py  pgvector_storage.py
services/retrieval/tests/: __init__.py  test_search_mock.py
services/tg_bot/: Dockerfile  pyproject.toml
services/tg_bot/src/tg_bot/: __init__.py  config.py  main.py  middleware.py
services/tg_bot/src/tg_bot/api/: __init__.py  orchestrator_client.py
services/tg_bot/src/tg_bot/handlers/: __init__.py  chat.py  commands.py
services/tg_bot/tests/: __init__.py  test_chat_format.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  config.py  embedder.py  http_client.py  logging.py  middleware.py
shared/src/shared/schemas/: __init__.py  health.py  request_context.py
