[project]
name = "shared"
version = "0.1.0"
description = "Shared library for Termidesk VDI bot services"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "prometheus-client>=0.19",
    "sentence-transformers>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
