[project]
name = "ingest"
version = "0.1.0"
description = "Ingest service - knowledge base loading"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.2.0",
    "pypdf>=4.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]
