[project]
name = "tg-bot"
version = "0.1.0"
description = "Telegram bot service for Termidesk VDI support"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "prometheus-client>=0.19",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_bot"]
